--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: '3'
 services:
+  web:
+    image: "nginx:1.19"
+    volumes:
+      - ./web/nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - "8080:8080"
   app:
     build: ./app
     ports:
