--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,14 @@ services:
       - ./web/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - "8080:8080"
+    depends_on:
+      - "app"
   app:
     build: ./app
     ports:
       - "3000:3000"
+    depends_on:
+      - "redis"
   redis:
     image: "redis:6.2"
 
