--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "3000:3000"
     depends_on:
       - "redis"
+    # command: "node ./server.js"
+    command: "./wait-for redis:6379 -- node ./server.js"
   redis:
     image: "redis:6.2"
-
-
