--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,6 @@ services:
     depends_on:
       - "redis"
     # command: "node ./server.js"
-    command: "./wait-for redis:6379 -- node ./server.js"
+    command: "sh ./wait-for redis:6379 -- node ./server.js"
   redis:
     image: "redis:6.2"
